--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {},
   "devDependencies": {
     "@stencil/core": "~0.16.2",
+    "@stencil/sass": "^0.1.1",
     "rimraf": "^2.6.3"
   },
   "license": "MIT"
