--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "devDependencies": {
     "@stencil/core": "~0.16.2",
     "@stencil/sass": "^0.1.1",
-    "rimraf": "^2.6.3"
+    "axios": "^0.18.0",
+    "object-dig": "^0.1.3",
+    "rimraf": "^2.6.3",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0"
   },
   "license": "MIT"
 }
