--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
   "devDependencies": {
     "@stencil/core": "~0.16.2",
     "@stencil/sass": "^0.1.1",
+    "@types/jest": "23.3.12",
+    "@types/node": "^10.12.18",
+    "@types/puppeteer": "1.11.1",
     "axios": "^0.18.0",
+    "jest": "23.6.0",
+    "jest-cli": "23.6.0",
     "object-dig": "^0.1.3",
+    "puppeteer": "1.8.0",
     "rimraf": "^2.6.3",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0"
