--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@alepop/stencil-env": "^0.2.0",
     "@stencil/core": "~0.16.2",
     "@stencil/sass": "^0.1.1",
     "@types/jest": "23.3.12",
