--- a/package.json
+++ b/package.json
@@ -13,21 +13,32 @@
     "clean": "rimraf dist www",
     "build": "stencil build --docs",
     "start": "stencil build --dev --watch --serve",
+    "storybook": "start-storybook -p 9009 -s www",
+    "storybook:watch": "run-p start storybook",
+    "storybook:build": "build-storybook",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll"
   },
   "dependencies": {},
   "devDependencies": {
     "@alepop/stencil-env": "^0.2.0",
+    "@babel/core": "^7.2.2",
     "@stencil/core": "~0.16.2",
     "@stencil/sass": "^0.1.1",
+    "@storybook/addon-knobs": "^4.1.7",
+    "@storybook/addon-storysource": "^4.1.7",
+    "@storybook/polymer": "^4.1.7",
     "@types/jest": "23.3.12",
     "@types/node": "^10.12.18",
     "@types/puppeteer": "1.11.1",
     "axios": "^0.18.0",
+    "babel-loader": "^8.0.5",
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
+    "lit-html": "^1.0.0-rc.2",
+    "npm-run-all": "^4.1.5",
     "object-dig": "^0.1.3",
+    "polymer-webpack-loader": "^2.0.3",
     "puppeteer": "1.8.0",
     "rimraf": "^2.6.3",
     "rollup-plugin-node-builtins": "^2.1.2",
