--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crds-components",
+  "name": "@crds_npm/crds-components",
   "version": "0.0.1",
   "description": "Custom Elements for Crossroads Church",
   "module": "dist/esm/index.js",
