--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "crds-components",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Custom Elements for Crossroads Church",
   "module": "dist/esm/index.js",
-  "main": "dist/crds-components.js",
+  "main": "dist/index.js",
   "types": "dist/types/components.d.ts",
   "collection": "dist/collection/collection-manifest.json",
   "files": [
