--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "dist/"
   ],
   "scripts": {
-    "clean": "rimraf dist www",
     "build": "stencil build --docs",
+    "clean": "rimraf dist www",
+    "deploy": "echo 'deploy'",
     "start": "stencil build --dev --watch --serve",
     "storybook": "start-storybook -p 9009 -s www",
-    "storybook:watch": "run-p start storybook",
     "storybook:build": "build-storybook",
+    "storybook:watch": "run-p start storybook",
     "test": "stencil test --spec --e2e",
-    "test.watch": "stencil test --spec --e2e --watchAll",
-    "deploy": "echo 'deploy'"
+    "test.watch": "stencil test --spec --e2e --watchAll"
   },
   "dependencies": {},
   "devDependencies": {
@@ -34,17 +34,37 @@
     "@types/puppeteer": "1.11.1",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
+    "crds-styles": "^3.2.3",
     "jest": "^24.1.0",
     "jest-cli": "^24.1.0",
     "lit-html": "^1.0.0-rc.2",
     "npm-run-all": "^4.1.5",
     "object-dig": "^0.1.3",
     "polymer-webpack-loader": "^2.0.3",
+    "prettier": "^1.16.4",
+    "prettier-stylelint": "^0.4.2",
     "puppeteer": "1.8.0",
     "rimraf": "^2.6.3",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-replace": "^2.1.0"
+    "rollup-plugin-replace": "^2.1.0",
+    "stylelint": "^9.10.1",
+    "stylelint-a11y": "^1.1.10",
+    "stylelint-at-rule-no-children": "^0.3.1",
+    "stylelint-config-prettier": "^4.0.0",
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-declaration-block-no-ignored-properties": "^1.1.0",
+    "stylelint-declaration-strict-value": "^1.1.2",
+    "stylelint-formatter-pretty": "^1.0.3",
+    "stylelint-high-performance-animation": "^1.1.1",
+    "stylelint-images": "^2.0.0",
+    "stylelint-no-indistinguishable-colors": "^1.2.1",
+    "stylelint-no-unsupported-browser-features": "^3.0.2",
+    "stylelint-order": "^2.0.0",
+    "stylelint-processor-ignore-front-matter": "^1.0.0",
+    "stylelint-scss": "^3.5.3",
+    "stylelint-suitcss": "^3.0.0",
+    "stylelint-z-index-value-constraint": "^1.0.0"
   },
   "license": "MIT"
 }
