--- a/package.json
+++ b/package.json
@@ -37,13 +37,12 @@
     "ajv": "^6.9.1",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
-    "jest": "^24.1.0",
-    "jest-cli": "^24.7.1",
+    "jest": "23.6.0",
     "lit-html": "^1.0.0",
     "npm-run-all": "^4.1.5",
     "object-dig": "^0.1.3",
     "polymer-webpack-loader": "^2.0.3",
-    "puppeteer": "^1.15.0",
+    "puppeteer": "1.8.0",
     "rimraf": "^2.6.3",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
