--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-replace": "^2.1.0",
+    "stencil-fragment": "^1.0.1",
     "stylelint": "^9.10.1",
     "stylelint-a11y": "^1.1.10",
     "stylelint-at-rule-no-children": "^0.3.1",
