--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
     "crds-styles": "^3.2.3",
-    "jest": "^24.1.0",
+    "jest": "23.6.0",
+    "jest-cli": "23.6.0",
     "lit-html": "^1.0.0-rc.2",
     "npm-run-all": "^4.1.5",
     "object-dig": "^0.1.3",
