US17019 - Front End Fix copy command

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
     npm run test &&
     npm run build &&
     npm run storybook:build &&
-    cp -R www/* storybook-static/demo &&
+    cp -R www storybook-static/demo &&
     mv www/build storybook-static &&
     mv www/data storybook-static &&
     mv dist storybook-static
