--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
     "noUnusedLocals": false,
     "noUnusedParameters": true,
     "jsx": "react",
-    "jsxFactory": "h"
+    "jsxFactory": "h",
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": ["src", "types/jsx.d.ts"],
   "exclude": ["node_modules"]
