--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,9 @@
-export CONTENTFUL_SPACE_ID=
-export CONTENTFUL_ENV=
-export CONTENTFUL_ACCESS_TOKEN=
-export CRDS_INTERACTIONS_ENDPOINT=
+CONTENTFUL_ACCESS_TOKEN=
+CONTENTFUL_ENV=
+CONTENTFUL_SPACE_ID=
+CRDS_INTERACTIONS_ENDPOINT=
+CRDS_USER_IMAGE_BASE_URL
+MP_ACCESS_TOKEN_COOKIE
+MP_REFRESH_TOKEN_COOKIE
+OKTA_CLIENT_ID
+OKTA_ISSUER
