US17046 - JSON Files Simplify shared-header usage

--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,4 @@
-export CONTENTFUL_SPACE_ID=
-export CONTENTFUL_ENV=
-export CONTENTFUL_ACCESS_TOKEN=
-export CRDS_INTERACTIONS_ENDPOINT=
+CONTENTFUL_ACCESS_TOKEN=
+CONTENTFUL_ENV=
+CONTENTFUL_SPACE_ID=
+CRDS_INTERACTIONS_ENDPOINT=
