US17260 - Shared Header Auth Adjustments from PR feedback

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test.watch": "stencil test --spec --e2e --watchAll"
   },
   "dependencies": {
-    "@crds_npm/crds-client-auth": "^1.0.19"
+    "@crds_npm/crds-client-auth": "1.0.19"
   },
   "devDependencies": {
     "@alepop/stencil-env": "^0.2.0",
