US17427 - Promos Content Block Render nav ctas from data

--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "stylelint-processor-ignore-front-matter": "^1.0.0",
     "stylelint-scss": "^3.5.3",
     "stylelint-suitcss": "^3.0.0",
-    "stylelint-z-index-value-constraint": "^1.0.0"
+    "stylelint-z-index-value-constraint": "^1.0.0",
+    "unescape": "^1.0.1"
   },
   "license": "MIT"
 }
