US17452 Snail Trail Include src in node_modules

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "types": "dist/types/components.d.ts",
   "collection": "dist/collection/collection-manifest.json",
   "files": [
+    "src/",
     "dist/"
   ],
   "scripts": {
