--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crds-components",
   "version": "0.0.6",
   "description": "Custom Elements for Crossroads Church",
-  "module": "dist/esm/index.js",
+  "module": "dist/index.mjs",
   "main": "dist/index.js",
   "repository": "git://github.com/crdschurch/crds-components",
   "types": "dist/types/components.d.ts",
