--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "@types/puppeteer": "1.12.4",
     "acorn": "^6.0.0",
     "ajv": "^6.9.1",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.5",
     "crds-styles": "3.3.0",
     "iframe-resizer": "^4.1.1",
     "jest": "24.8.0",
     "jest-cli": "24.8.0",
     "lit-html": "^1.0.0-rc.2",
+    "marked": "^0.7.0",
     "npm-run-all": "^4.1.5",
     "object-dig": "^0.1.3",
     "polymer-webpack-loader": "^2.0.3",
