--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "@alepop/stencil-env": "^0.2.0",
     "@babel/core": "^7.2.2",
-    "@crds_npm/crds-client-auth": "1.0.19",
+    "@crds_npm/crds-client-auth": "^1.0.19",
     "@stencil/core": "~1.1.3",
     "@stencil/sass": "^1.0.1",
     "@storybook/addon-knobs": "^5.0.11",
