--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "crds-components",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Custom Elements for Crossroads Church",
   "module": "dist/index.mjs",
-  "main": "dist/crds-components.js",
+  "main": "dist/index.js",
   "repository": "git://github.com/crdschurch/crds-components",
   "types": "dist/types/components.d.ts",
   "collection": "dist/collection/collection-manifest.json",
