--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@alepop/stencil-env": "^0.2.0",
     "@babel/core": "^7.2.2",
     "@crds_npm/crds-client-auth": "^1.1.8",
-    "@stencil/core": "~1.1.3",
+    "@stencil/core": "1.1.3",
     "@stencil/sass": "^1.0.1",
     "@storybook/addon-knobs": "^5.0.11",
     "@storybook/addon-storysource": "^5.0.11",
