--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "allowUnreachableCode": false,
     "declaration": false,
     "experimentalDecorators": true,
-    "lib": ["dom", "es2016", "es2017"],
+    "lib": ["dom", "es2016", "es2017", "esnext.asynciterable"],
     "moduleResolution": "node",
     "module": "esnext",
     "target": "es2017",
