--- a/package.json
+++ b/package.json
@@ -71,8 +71,10 @@
     "apollo-client": "^2.6.4",
     "apollo-link-context": "^1.0.18",
     "apollo-link-http": "^1.5.15",
+    "cross-fetch": "^3.0.4",
     "graphql": "^14.5.0",
     "graphql-tag": "^2.10.1",
+    "node-fetch": "^2.6.0",
     "stringify-object": "^3.3.0"
   }
 }
