--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   "devDependencies": {
     "@alepop/stencil-env": "^0.2.0",
     "@babel/core": "^7.2.2",
-    "@crds_npm/crds-client-auth": "^1.1.8",
-    "@stencil/core": "1.1.3",
+    "@crds_npm/crds-client-auth": "^1.1.13",
     "@graphql-codegen/cli": "^1.6.1",
     "@graphql-codegen/typescript": "^1.6.1",
+    "@stencil/core": "~1.4.0",
     "@stencil/sass": "^1.0.1",
     "@storybook/addon-knobs": "^5.0.11",
     "@storybook/addon-storysource": "^5.0.11",
@@ -57,6 +57,7 @@
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-replace": "^2.2.0",
     "stencil-fragment": "^1.0.1",
+    "stencil-inline-svg": "^1.0.0",
     "stylelint": "^10.1.0",
     "stylelint-formatter-pretty": "^1.0.3",
     "stylelint-order": "^3.0.0",
