--- a/package.json
+++ b/package.json
@@ -25,13 +25,6 @@
   "devDependencies": {
     "@alepop/stencil-env": "^0.2.0",
     "@babel/core": "^7.2.2",
-    "@crds_npm/crds-client-auth": "^1.1.16",
-    "@graphql-codegen/cli": "^1.6.1",
-    "@graphql-codegen/typescript": "^1.6.1",
-    "@stencil/core": "1.1.3",
-    "@stencil/sass": "^1.0.1",
-    "@storybook/addon-knobs": "^5.0.11",
-    "@storybook/addon-storysource": "^5.0.11",
     "@storybook/polymer": "^5.0.11",
     "@types/jest": "24.0.15",
     "@types/node": "^10.12.18",
@@ -42,6 +35,7 @@
     "babel-loader": "^8.0.5",
     "crds-cypress-login": "^1.0.1",
     "crds-styles": "3.3.0",
+    "cypress-shadow-dom": "^1.1.1",
     "iframe-resizer": "^4.1.1",
     "jest": "24.8.0",
     "jest-cli": "24.8.0",
@@ -72,7 +66,7 @@
     "apollo-client": "^2.6.4",
     "apollo-link-context": "^1.0.18",
     "apollo-link-http": "^1.5.15",
-    "cypress": "^3.6.0",
+    "cypress": "^3.6.1",
     "detect-node": "^2.0.4",
     "graphql": "^14.5.0",
     "graphql-tag": "^2.10.1",
