commit gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ UserInterfaceState.xcuserstate
 /.vs/slnx.sqlite
 /.vs/slnx.sqlite-journal
 /.vs/crds-components/v15/.suo
+/.vs/config/applicationhost.config
+/.vs/VSWorkspaceState.json
