--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "@alepop/stencil-env": "^0.2.0",
     "@babel/core": "^7.2.2",
     "@crds_npm/crds-client-auth": "^1.1.16",
-    "@stencil/core": "1.1.3",
     "@graphql-codegen/cli": "^1.6.1",
     "@graphql-codegen/typescript": "^1.6.1",
+    "@stencil/core": "1.1.3",
     "@stencil/sass": "^1.0.1",
     "@storybook/addon-knobs": "^5.0.11",
     "@storybook/addon-storysource": "^5.0.11",
@@ -78,6 +78,7 @@
     "jquery": "^3.4.1",
     "node-fetch": "^2.6.0",
     "popper.js": "^1.15.0",
+    "stylelint-webpack-plugin": "^1.1.0",
     "toastr": "^2.1.4"
   }
 }
