--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "@alepop/stencil-env": "^0.2.0",
     "@babel/core": "^7.2.2",
     "@crds_npm/crds-client-auth": "^1.1.16",
-    "@stencil/core": "1.1.3",
     "@graphql-codegen/cli": "^1.6.1",
     "@graphql-codegen/typescript": "^1.6.1",
+    "@stencil/core": "1.1.3",
     "@stencil/sass": "^1.0.1",
     "@storybook/addon-knobs": "^5.0.11",
     "@storybook/addon-storysource": "^5.0.11",
@@ -46,6 +46,7 @@
     "jest-cli": "24.8.0",
     "lit-html": "^1.0.0-rc.2",
     "marked": "^0.7.0",
+    "node-sass-magic-importer": "^5.3.2",
     "npm-run-all": "^4.1.5",
     "object-dig": "^0.1.3",
     "polymer-webpack-loader": "^2.0.3",
