--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@crds_npm/crds-client-auth": "^1.1.16",
     "@graphql-codegen/cli": "^1.6.1",
     "@graphql-codegen/typescript": "^1.6.1",
-    "@stencil/core": "1.1.3",
+    "@stencil/core": "1.8.1",
     "@stencil/sass": "^1.0.1",
     "@storybook/addon-knobs": "^5.0.11",
     "@storybook/addon-storysource": "^5.0.11",
@@ -65,7 +65,8 @@
     "stylelint-order": "^3.0.0",
     "stylelint-scss": "^3.8.0",
     "unescape": "^1.0.1",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "stencil-inline-svg": "^1.0.1"
   },
   "license": "MIT",
   "dependencies": {
