update version of jest package

--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "@storybook/addon-knobs": "^5.0.11",
     "@storybook/addon-storysource": "^5.0.11",
     "@storybook/polymer": "^5.0.11",
-    "@types/jest": "24.0.15",
+    "@types/jest": "24.0.23",
     "@types/node": "^10.12.18",
-    "@types/puppeteer": "1.12.4",
+    "@types/puppeteer": "1.19.0",
     "acorn": "^6.0.0",
     "ajv": "^6.9.1",
     "axios": "^0.19.0",
@@ -54,19 +54,19 @@
     "polymer-webpack-loader": "^2.0.3",
     "prettier": "^1.16.4",
     "prettier-stylelint": "^0.4.2",
-    "puppeteer": "1.17.0",
+    "puppeteer": "1.19.0",
     "rimraf": "^2.6.3",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-replace": "^2.2.0",
     "stencil-fragment": "^1.0.1",
+    "stencil-inline-svg": "^1.0.1",
     "stylelint": "^10.1.0",
     "stylelint-formatter-pretty": "^1.0.3",
     "stylelint-order": "^3.0.0",
     "stylelint-scss": "^3.8.0",
     "unescape": "^1.0.1",
-    "url": "^0.11.0",
-    "stencil-inline-svg": "^1.0.1"
+    "url": "^0.11.0"
   },
   "license": "MIT",
   "dependencies": {
