--- a/package.json
+++ b/package.json
@@ -24,61 +24,61 @@
   },
   "devDependencies": {
     "@alepop/stencil-env": "^0.2.0",
-    "@babel/core": "^7.2.2",
-    "@crds_npm/crds-client-auth": "^1.1.16",
-    "@graphql-codegen/cli": "^1.6.1",
-    "@graphql-codegen/typescript": "^1.6.1",
-    "@stencil/core": "1.1.3",
-    "@stencil/sass": "^1.0.1",
-    "@storybook/addon-knobs": "^5.0.11",
-    "@storybook/addon-storysource": "^5.0.11",
-    "@storybook/polymer": "^5.0.11",
-    "@types/jest": "24.0.15",
-    "@types/node": "^10.12.18",
+    "@babel/core": "^7.7.2",
+    "@crds_npm/crds-client-auth": "^1.1.17",
+    "@graphql-codegen/cli": "^1.8.3",
+    "@graphql-codegen/typescript": "^1.8.3",
+    "@stencil/core": "1.8.1",
+    "@stencil/sass": "1.1.1",
+    "@storybook/addon-knobs": "^5.2.6",
+    "@storybook/addon-storysource": "^5.2.6",
+    "@storybook/polymer": "^5.2.6",
+    "@types/node": "^10.17.5",
     "@types/puppeteer": "1.19.1",
-    "acorn": "^6.0.0",
-    "ajv": "^6.9.1",
+    "acorn": "^6.3.0",
+    "ajv": "^6.10.2",
     "axios": "^0.19.0",
-    "babel-loader": "^8.0.5",
-    "crds-styles": "3.3.0",
-    "iframe-resizer": "^4.1.1",
+    "babel-loader": "^8.0.6",
+    "crds-styles": "3.3.6",
+    "iframe-resizer": "^4.2.8",
     "jest": "24.8.0",
     "jest-cli": "24.8.0",
-    "lit-html": "^1.0.0-rc.2",
+    "lit-html": "^1.1.2",
     "marked": "^0.7.0",
     "node-sass-magic-importer": "^5.3.2",
     "npm-run-all": "^4.1.5",
     "object-dig": "^0.1.3",
     "polymer-webpack-loader": "^2.0.3",
-    "prettier": "^1.16.4",
+    "prettier": "^1.19.1",
     "prettier-stylelint": "^0.4.2",
     "puppeteer": "1.19.0",
-    "rimraf": "^2.6.3",
+    "rimraf": "^2.7.1",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-replace": "^2.2.0",
     "stencil-fragment": "^1.0.1",
-    "stencil-inline-svg": "^1.0.0",
+    "stencil-inline-svg": "^1.0.1",
     "stylelint": "^10.1.0",
-    "stylelint-formatter-pretty": "^1.0.3",
-    "stylelint-order": "^3.0.0",
-    "stylelint-scss": "^3.8.0",
+    "stylelint-formatter-pretty": "^1.1.3",
+    "stylelint-order": "^3.1.1",
+    "stylelint-scss": "^3.12.1",
     "unescape": "^1.0.1",
     "url": "^0.11.0"
   },
   "license": "MIT",
   "dependencies": {
+    "@types/jest": "^24.0.23",
     "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
     "detect-node": "^2.0.4",
-    "graphql": "^14.5.0",
+    "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "jquery": "^3.4.1",
     "node-fetch": "^2.6.0",
-    "popper.js": "^1.15.0",
+    "popper.js": "^1.16.0",
     "stylelint-webpack-plugin": "^1.1.0",
     "toastr": "^2.1.4"
   }
