--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@storybook/addon-knobs": "^5.2.6",
     "@storybook/addon-storysource": "^5.2.6",
     "@storybook/polymer": "^5.2.6",
+    "@types/jest": "^24.0.23",
     "@types/node": "^10.17.5",
     "@types/puppeteer": "1.19.1",
     "acorn": "^6.3.0",
@@ -41,8 +42,8 @@
     "babel-loader": "^8.0.6",
     "crds-styles": "3.3.6",
     "iframe-resizer": "^4.2.8",
-    "jest": "24.8.0",
-    "jest-cli": "24.8.0",
+    "jest": "24.9.0",
+    "jest-cli": "24.9.0",
     "lit-html": "^1.1.2",
     "marked": "^0.7.0",
     "node-sass-magic-importer": "^5.3.2",
@@ -63,8 +64,7 @@
     "stylelint-order": "^3.1.1",
     "stylelint-scss": "^3.12.1",
     "unescape": "^1.0.1",
-    "url": "^0.11.0",
-    "@types/jest": "^24.0.23"
+    "url": "^0.11.0"
   },
   "license": "MIT",
   "dependencies": {
