--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "storybook:watch": "run-p start storybook",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "graphql-codegen"
+    "generate": "graphql-codegen",
+    "cypress:local": "run-p start storybook && $(npm bin)/percy exec -- $(npm bin)/cypress open"
   },
   "devDependencies": {
     "@alepop/stencil-env": "^0.2.0",
@@ -28,6 +29,7 @@
     "@crds_npm/crds-client-auth": "^1.1.18",
     "@graphql-codegen/cli": "^1.8.3",
     "@graphql-codegen/typescript": "^1.8.3",
+    "@percy/cypress": "^2.2.0",
     "@stencil/core": "1.8.1",
     "@stencil/sass": "1.1.1",
     "@storybook/addon-knobs": "^5.2.6",
@@ -41,6 +43,8 @@
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "crds-styles": "3.3.6",
+    "cypress": "^3.8.2",
+    "cypress-shadow-dom": "^1.3.0",
     "iframe-resizer": "^4.2.8",
     "jest": "24.9.0",
     "jest-cli": "24.9.0",
@@ -73,6 +77,7 @@
     "apollo-client": "^2.6.4",
     "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
+    "crds-cypress-login": "^1.0.1",
     "detect-node": "^2.0.4",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
