--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "graphql-codegen",
-    "cypress:local": "run-p start storybook && $(npm bin)/percy exec -- $(npm bin)/cypress open"
+    "snapshot": "build-storybook && percy-storybook --widths=320,1280",
+    "cypress:local:open": "stencil build && concurrently 'npm run storybook:run' 'npm run cypress:test:open' -k -s first",
+    "cypress:local:run": "stencil build && concurrently 'npm run storybook:run' 'npm run cypress:test:run' -k -s first",
+    "storybook:run": "start-storybook -p 9009",
+    "cypress:test:open": "wait-on http://localhost:9009 && cypress open",
+    "cypress:test:run": "wait-on http://localhost:9009 && cypress run"
   },
   "devDependencies": {
     "@alepop/stencil-env": "^0.2.0",
@@ -30,6 +35,7 @@
     "@graphql-codegen/cli": "^1.8.3",
     "@graphql-codegen/typescript": "^1.8.3",
     "@percy/cypress": "^2.2.0",
+    "@percy/storybook": "^3.2.0",
     "@stencil/core": "1.8.1",
     "@stencil/sass": "1.1.1",
     "@storybook/addon-knobs": "^5.2.6",
@@ -42,6 +48,7 @@
     "ajv": "^6.10.2",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
+    "concurrently": "^5.0.2",
     "crds-styles": "3.3.6",
     "cypress": "^3.8.2",
     "cypress-shadow-dom": "^1.3.0",
@@ -68,7 +75,8 @@
     "stylelint-order": "^3.1.1",
     "stylelint-scss": "^3.12.1",
     "unescape": "^1.0.1",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "wait-on": "^4.0.0"
   },
   "license": "MIT",
   "dependencies": {
