--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "graphql-codegen",
     "snapshot": "build-storybook && percy-storybook --widths=320,1280",
-    "cypress:open": "stencil build && concurrently 'npm run storybook:run' 'npm run cypress:test:open' -k -s first",
-    "cypress:run": "stencil build && concurrently 'npm run storybook:run' 'npm run cypress:test:run' -k -s first",
+    "cypress:open": "concurrently 'npm run storybook:run' 'npm run cypress:test:open' -k -s first",
+    "cypress:run": "concurrently 'npm run storybook:run' 'npm run cypress:test:run' -k -s first",
     "storybook:run": "start-storybook -p 9009",
     "cypress:test:open": "wait-on http://localhost:9009 && cypress open",
     "cypress:test:run": "wait-on http://localhost:9009 && cypress run --record --key 9633b215-c00d-413f-801d-2e57d7459da6",
