fixes cypress local infinite loop

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "snapshot": "build-storybook && percy-storybook --widths=320,1280",
     "cypress:open": "concurrently 'npm run storybook:run' 'npm run cypress:test:open' -k -s first",
     "cypress:run": "concurrently 'npm run storybook:run' 'npm run cypress:test:run' -k -s first",
-    "cypress:local:open": "stencil build --docs && cypress:local:open",
-    "cypress:local:run": "stencil build --docs && cypress:local:run",
+    "cypress:local:open": "stencil build --docs && cypress:open",
+    "cypress:local:run": "stencil build --docs && cypress:run",
     "storybook:run": "start-storybook -p 9009",
     "cypress:test:open": "wait-on http://localhost:9009 && cypress open",
     "cypress:test:run": "wait-on http://localhost:9009 && cypress run --record --key 9633b215-c00d-413f-801d-2e57d7459da6",
